# common-file-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish-image.yml
configs/: sample-deck.json
design/: ADR-001-template-driven-office-file-generator.md  ADR-002-fastapi-htmx-ui.md  ADR-003-word-document-generator.md  ADR-004-excel-workbook-generator.md  ADR-005-pdf-generator.md  ADR-006-markdown-generator.md  ADR-008-containerize-api-and-ui.md  ADR-009-rename-to-common-file-generator.md  ADR-012-word-generator-theming.md  ADR-014-visual-docs-ui-screenshots.md  README.md
docs/: config-guide.md  getting-started.md  golden-file-guide.md  how-it-works.md  index.md  ui-walkthrough.md
scripts/: capture_screenshots.py
src/common_file_generator/: __init__.py  cli.py
src/common_file_generator/core/: __init__.py  config.py  injector.py  lorem.py  report.py
src/common_file_generator/generators/: __init__.py  background.py  docx.py  docx_theme.py  markdown.py  pdf.py  pptx.py  slides.py  style.py  xlsx.py
src/common_file_generator/injectors/: __init__.py  _text.py  docx.py  pptx.py  xlsx.py
src/common_file_generator/web/: __init__.py  (+6 more)
src/ms_office_file_generator/: __init__.py  cli.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_doc_generator.py  test_error_paths.py  test_generator.py  test_injectors.py  test_markdown_generator.py  test_package.py  test_pdf_generator.py  test_report.py  test_sheet_generator.py  test_web.py
(+28 files in other folders)
